--- a/1-network/styles.css
+++ b/1-network/styles.css
@@ -5,7 +5,6 @@
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
-
 body {
   overflow: hidden;
   background: #f2f2f2;
@@ -13,8 +12,38 @@ body {
 .wrapper {
   position: absolute;
   top: 50%;
-  left: 50%;
+  right: 50%;
   transform: translate(-50%, -50%);
+  animation: show_toast 1s ease forwards;
+}
+@keyframes show_toast {
+  0% {
+    transform: translateX(-100%);
+  }
+  40% {
+    transform: translateX(10%);
+  }
+  80%,
+  100% {
+    transform: translateX(5px);
+  }
+}
+.wrapper.hide {
+  animation: hide_toast 1s ease forwards;
+}
+@keyframes hide_toast {
+  0% {
+    transform: translateX(20px);
+  }
+  40% {
+    transform: translateX(10%);
+  }
+  80%,
+  100% {
+    opacity: 0;
+    pointer-events: none;
+    transform: translateX(-100%);
+  }
 }
 .wrapper .toast {
   background: #fff;
@@ -27,7 +56,9 @@ body {
   justify-content: space-between;
   box-shadow: 1px 7px 14px -5px rgba(0, 0, 0, 0.15);
 }
-
+.wrapper .toast.offline {
+  border-color: #ccc;
+}
 .toast .content {
   display: flex;
   align-items: center;
@@ -42,6 +73,9 @@ body {
   border-radius: 50%;
   color: #fff;
 }
+.toast.offline .content .icon {
+  background: #ccc;
+}
 .toast .content .details {
   margin-left: 15px;
 }
@@ -49,11 +83,9 @@ body {
   font-size: 20px;
   font-weight: 500;
 }
-
 .content .details p {
   color: #878787;
 }
-
 .toast .close-icon {
   background: #f2f2f2;
   height: 40px;
